WIP: add return routability check support.
Initial experimental implementation.

Signed-off-by: Achim Kraus <achim.kraus@cloudcoap.net>