@@ -1,5 +1,72 @@
 ![Californium logo](cf_64.png)
 
+# Feature Branch: Return Routability Check (RRC)
+
+This feature branch is a first and experimental implementation of 
+[Return Routability Check for DTLS 1.2 and DTLS 1.3](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html).
+
+The feature will prevent amplification attacks using spoofing source addresses of messages with [RFC 9146, Connection Identifier for DTLS 1.2](https://www.rfc-editor.org/info/rfc9146).
+
+When a peer receives a DTLS CID record with an change ip-endpoint, the next outgoing message may trigger a [Path Validation Procedure - Basic](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html#section-7.1), if the size of the outgoing message exceeds the incoming message by configurable `DTLS.RETURN_ROUTABILITY_CHECK_THRESHOLD`. An application may also decide to trigger such a [Path Validation Procedure - Basic](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html#section-7.1) by using `KEY_RETURN_ROUTABILITY_CHECK` endpoint-context attribute with value `TRUE`.
+
+## Early Interop Tests for Return Routability Check (RRC)
+
+In order to test the interoperability , you may either use your own [PlugtestServer - download](https://repo.eclipse.org/content/repositories/californium-releases/org/eclipse/californium/cf-plugtest-server/3.11.0-RRC-0/cf-plugtest-server-3.11.0-RRC-0.jar) or use the [Interop-Server](#interop-server).
+
+To simulate ip-endpoint changes, the [cf-nat - download](https://repo.eclipse.org/content/repositories/californium-releases/org/eclipse/californium/cf-nat/3.11.0-RRC-0/cf-nat-3.11.0-RRC-0.jar) may be used.
+
+And as client, the [Cf-Browser - download](https://repo.eclipse.org/content/repositories/californium-releases/org/eclipse/californium/cf-browser/3.11.0-RRC-0/cf-browser-3.11.0-RRC-0.jar) may be used.
+
+## Installation and Run Components Locally
+
+In order to execute the samples locally, a java runtime is required. Please follow the instructions in the [WiKi - Californium running the sandbox locally for integration tests](https://github.com/eclipse-californium/californium/wiki/Californium---running-the-sandbox-locally-for-integration-tests#requirements) how to install and test it.
+
+If you want to run the `PlugtestServer` locally, that wiki also contains the instructions.
+
+Once the java runtime is available, the [cf-nat - instructions](https://github.com/eclipse-californium/californium/tree/main/cf-utils/cf-nat) could be used. For testing the [Path Validation Procedure - Basic](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html#section-7.1) start it with:
+
+```
+java -jar cf-nat-<version>.jar :6684 localhost:5684 -tnat=5000
+```
+
+when running the `PlugtestServer` locally, or
+
+```
+java -jar cf-nat-<version>.jar -tnat=5000  :6684 californium.eclipseprojects.io:5684
+```
+
+when the [Interop-Server](#interop-server) should be used.
+
+The NAT will timeout the ip-routes after 5s without traffic. Therefore, if you wait a little longer before sending the next message, the server will receive the message via the new ip-endpoint mapping and will detect that as ip-endpoint change.
+
+To use the `Cf-Browser` requires to install [javafx](https://gluonhq.com/products/javafx/) additionally. Please follow the [Cf-Browser - instruction](https://github.com/eclipse-californium/californium.tools/tree/main/cf-browser) for installation.
+
+(In short: download the javafx SDK for your platform, uncompress it and copy the path to the contained `lib` folder in order to use it for the CLI below.)
+
+To use it, please start it with:
+
+```
+java --module-path <path-to>/javafx-sdk-???/lib --add-modules javafx.controls,javafx.fxml -jar cf-browser-<version>.jar --cid-length=4 coaps://localhost:6684/rrc
+```
+
+(`<path-to>` according your local path of the `javafx-sdk-???/lib` folder.)
+
+That will send the messages via the NAT (`localhost:6684`) to the `PlugtestServer`, which is used as destination for the NAT, either `localhost:5684` or `californium.eclipseprojects.io:5684`.
+
+The resource `rrc` will force a return routability check even for small responses. The `PlugtestServer` uses a small blocksize of 64 bytes and with that the default amplification threshold of 3.0 is hard to reach.
+
+## Simulate Spoof Attack (Amplification Attack)
+
+One possible [attack scenario](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html#section-6.1) considered is based on manipulating the source address. Without using [RFC 9146, Connection Identifier for DTLS 1.2](https://www.rfc-editor.org/info/rfc9146) this causes a MAC violation and is filtered out on receiving and processing that message within the DTLS layer. With CID the still valid content of the message could be processed, but the wrong address can not be distinguished from an usual address change caused by a NAT or something similar. If the processing of the message results in a large response message, then this maybe misused for DDoS attacks. Therefore [Path Validation Procedure - Basic](https://tlswg.org/dtls-rrc/draft-ietf-tls-dtls-rrc.html#section-7.1) checks with a small message, if the new route is valid.
+
+If the tool from the section before are still running, then just type
+
+```
+spoof
+```
+
+into the CLI of the NAT. The next message will be send with an ephemeral outgoing address. When the server then sends the "path-challenge" it doesn't receive an answer and times out the check without sending the (large) application response.
+
 # Californium (Cf) - CoAP for Java
 
 Eclipse Californium is a Java implementation of [RFC7252 - Constrained Application Protocol](http://tools.ietf.org/html/rfc7252) for IoT Cloud services. Thus, the focus is on scalability and usability instead of resource-efficiency like for embedded devices. Yet Californium is also suitable for embedded JVMs.
